# fastapi-celery

./: Dockerfile  README.md  celery_config.py  docker-compose.yml  pyproject.toml  webserver.py
src/config/: config.py
src/tasks/: tasks.py
src/webserver/: webserver.py
