[tool.poetry]
name = "fastapi-celery"
version = "0.1.0"
description = ""
authors = ["vsaraph <vikram.saraph.22@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.85.1"
celery = "^5.2.7"
pydantic = "^1.10.2"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
